Migrate labkey-client-api to use a modern JSON library: JSON-java (#85)
Co-authored-by: labkey-tchad <tchad@labkey.com>