@@ -1,8 +1,6 @@
 package org.labkey.test.tests.response;
 
 import org.jetbrains.annotations.Nullable;
-import org.json.simple.JSONArray;
-import org.json.simple.JSONObject;
 import org.junit.AfterClass;
 import org.junit.Before;
 import org.junit.BeforeClass;
@@ -39,8 +37,6 @@ import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.junit.Assert.assertEquals;
@@ -71,7 +67,7 @@ public class ParticipantPropertiesTest extends BaseResponseTest
             "decimalPreEnroll", "datePreEnroll", "timePreEnroll", "booleanPreEnroll");
     private final static List<String> STANDARD_FIELD_NAMES = Arrays.asList("Modified", "lastIndexed",
             "ModifiedBy", "Created", "CreatedBy", "container", "EntityId", "diImportHash");
-    private final static List<String> ALL_FIELDS = Stream.of(PREENROLLMENT_FIELD_NAMES, POSTENROLLMENT_FIELD_NAMES, STANDARD_FIELD_NAMES).flatMap(Collection::stream).collect(Collectors.toList());
+    private final static List<String> ALL_FIELDS = Stream.of(PREENROLLMENT_FIELD_NAMES, POSTENROLLMENT_FIELD_NAMES, STANDARD_FIELD_NAMES).flatMap(Collection::stream).toList();
     private final static String TOKEN_BATCH_SIZE = "10";
 
     private final static int EXECUTE_SQL_INDEX = 0;
@@ -258,10 +254,10 @@ public class ParticipantPropertiesTest extends BaseResponseTest
         log(String.format("Query ParticipantProperties list, via select rows using participantId [%1$s] and enrollmentToken [%2$s]", participantAppToken, token));
         CommandResponse selectRowsResponse = callSelectRows(params);
         Map<String, Object> results = selectRowsResponse.getParsedData();
-        assertEquals("Unexpected rowcount returned participant id", 1L, results.get("rowCount"));
-        JSONArray rows = selectRowsResponse.getProperty("rows");
-        JSONObject row = (JSONObject)rows.get(0);
-        checkJsonObjectAgainstExpectedValues(values, row);
+        assertEquals("Unexpected rowcount returned participant id", 1, results.get("rowCount"));
+        List<Map<String, Object>> rows = selectRowsResponse.getProperty("rows");
+        Map<String, Object> row = rows.get(0);
+        checkJsonMapAgainstExpectedValues(values, row);
     }
 
 
@@ -283,7 +279,7 @@ public class ParticipantPropertiesTest extends BaseResponseTest
 
         CommandResponse executeSqlResponse = callExecuteSql(params);
         Map<String, Object> results = executeSqlResponse.getParsedData();
-        assertEquals("Unexpected row returned across container boundary", 0L, results.get("rowCount"));
+        assertEquals("Unexpected row returned across container boundary", 0, results.get("rowCount"));
     }
 
     /**
@@ -303,12 +299,12 @@ public class ParticipantPropertiesTest extends BaseResponseTest
 
         CommandResponse executeSqlResponse = callExecuteSql(params);
         Map<String, Object> results = executeSqlResponse.getParsedData();
-        assertEquals("Unexpected row returned w/o participant id", 1L, results.get("rowCount"));
-        JSONArray rows = executeSqlResponse.getProperty("rows");
-        JSONObject jsonArrayEntry = (JSONObject)rows.get(0);
-        JSONObject rowData = (JSONObject)jsonArrayEntry.get("data");
+        assertEquals("Unexpected row returned w/o participant id", 1, results.get("rowCount"));
+        List<Map<String, Object>> rows = executeSqlResponse.getProperty("rows");
+        Map<String, Object> row = rows.get(0);
+        Map<String, Object> rowData = (Map<String, Object>)row.get("data");
         assertNotNull("No ParticipantProperties row data returned by execute sql", rowData);
-        for (String propertyId : (Set<String>)rowData.keySet())
+        for (String propertyId : rowData.keySet())
         {
             assertTrue(String.format("Unexpected column found: " + propertyId), POSTENROLLMENT_FIELD_NAMES.contains(propertyId)
                     || PREENROLLMENT_FIELD_NAMES.contains(propertyId) || STANDARD_FIELD_NAMES.contains(propertyId));
@@ -450,9 +446,9 @@ public class ParticipantPropertiesTest extends BaseResponseTest
 
         CommandResponse selectRowsResponse = callSelectRows(params);
         Map<String, Object> results = selectRowsResponse.getParsedData();
-        assertEquals("Unexpected row returned w/o participant id", 1L, results.get("rowCount"));
-        JSONArray rows = selectRowsResponse.getProperty("rows");
-        Map<String, Object> row = (Map<String, Object>)rows.get(0);
+        assertEquals("Unexpected row returned w/o participant id", 1, results.get("rowCount"));
+        List<Map<String, Object>> rows = selectRowsResponse.getProperty("rows");
+        Map<String, Object> row = rows.get(0);
         for (String propertyId : row.keySet())
         {
             assertTrue(String.format("Expected column not found: " + propertyId), "SingleProperty".equalsIgnoreCase(propertyId) || ENROLLMENTTOKEN_FIELD_KEY.equalsIgnoreCase(propertyId));
